CLI event results renderers, closes #12